--- a/README
+++ b/README
@@ -3,9 +3,9 @@ Python-Fortran hybrid version of MOOG spectral synthesis code
 
 
 # Installation
-1) fork the repository
-2) ensure that MoogPy/MoogTools/ is in your PYTHONPATH, or otherwise visible from your python session
-3) enter the MoogPy/MoogSource/ directory, run the recompile.sh script.  This will compile the FORTRAN part of Moog, wrap it in python, and copy the MoogPy.so file to the MoogPy/MoogTools/ directory
-4) Download the MoogPyData.tar.gz file from http://www.mpia.de/~deen/Software/MoogPy/MoogPy.html, place it in the MoogPy/data/ directory, and unzip it.  It should create 3 directories (AbsorptionLines, Atmospheres, and ObservedSpectra) filled to the brim with useful data.
+1) Fork (or download) the repository
+2) Ensure that the MoogPy/MoogTools/ directory is in your PYTHONPATH, or otherwise visible from your python session.  To test, you should be able to import the following libraries: AstroUtils.py, MoogTools.py, and SpectralTools.py
+3) Enter the MoogPy/MoogSource/ directory, and run the recompile.sh script.  The script will compile the FORTRAN part of Moog, wrap it in python, and automatically copy the MoogPy.so file to the MoogPy/MoogTools/ directory
+4) Download the MoogPyData.tar.gz file from http://www.mpia.de/~deen/Software/MoogPy/MoogPy.html, place it in the MoogPy/data/ directory, and unzip it.  It should create 3 directories (AbsorptionLines, Atmospheres, and ObservedSpectra) filled to the brim with useful data.  If you decide to put the data files elsewhere, ensure that the config files (moogPy.cfg and moogPar.cfg) point to the proper directories/files.
 5) Start up python
 6) run example.py
