--- a/README
+++ b/README
@@ -14,4 +14,4 @@ pyfits
 3) Enter the MoogPy/MoogSource/ directory, and run the recompile.sh script.  The script will compile the FORTRAN part of Moog, wrap it in python, and automatically copy the MoogPy.so file to the MoogPy/MoogTools/ directory
 4) Download the MoogPyData.tar.gz file from http://www.mpia.de/~deen/Software/MoogPy/MoogPy.html, place it in the MoogPy/data/ directory, and unzip it.  It should create 3 directories (AbsorptionLines, Atmospheres, and ObservedSpectra) filled to the brim with useful data.  If you decide to put the data files elsewhere, ensure that the config files (moogPy.cfg and moogPar.cfg) point to the proper directories/files.
 5) Start up python
-6) run example.py
+6) run StokesExample.py
